--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
 			<version>1.18.2</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- Relatório -->
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>4.2.2</version>
+		</dependency>
 		
 		<!-- Mapper -->
 		<dependency>
